--- a/HCI-lab/src/components/infoCard/style.module.css
+++ b/HCI-lab/src/components/infoCard/style.module.css
@@ -37,6 +37,10 @@
       flex-direction: column-reverse;
     }
 
+    .container {
+      padding: 0;
+    }
+
     .image {
       width: 80%;
     }
