--- a/HCI-lab/src/components/searchTagBar/style.module.css
+++ b/HCI-lab/src/components/searchTagBar/style.module.css
@@ -108,6 +108,9 @@
     .clearDisabled {
         align-content: flex-start;
         margin-bottom: 20px;
+        width: 0px;
+        margin-left: 0;
+        transition: all 0.5s;
     }
 
     .clearBtn {
