--- a/HCI-lab/src/pages/aboutUs.module.css
+++ b/HCI-lab/src/pages/aboutUs.module.css
@@ -1,5 +1,5 @@
 .companyInfoContainer {
-  width: 80%;
+  width: 90%;
   margin: 30px auto;
   font-size: 20px;
   line-height: 25px;
